--- a/resources/css/light.css
+++ b/resources/css/light.css
@@ -36,11 +36,11 @@ body {
 } /* this targets the default scrollbar (compulsory) */
 
 ::-webkit-scrollbar-track {
-    background-color: #F2F2F2;
+    background-color: #FDFDFD;
 } /* the new scrollbar will have a flat appearance with the set background color */
 
 ::-webkit-scrollbar-thumb {
-    background-color: rgba(64,64,64,0.5); 
+    background-color: #cacaca;
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -51,7 +51,7 @@ body {
 } /* optionally, you can style the top and the bottom buttons (left and right for horizontal bars) */
 
 ::-webkit-scrollbar-corner {
-    background-color: #F2F2F2;
+    background-color: #FDFDFD;
 } /* if both the vertical and the horizontal bars appear, then perhaps the right bottom corner also needs to be styled */
 
 
